#
# $Id: $
#

MAINTAINERCLEANFILES = Makefile.in stamp-vti

EXTRA_DIST =    avr_target.py \
                base_test.py \
                gdb_rsp.py \
                registers.py \
                create_makefile.py \
                regress_unittest.py \
                simtestutil.py \
                vcdreader.py \
                vcdtestutil.py
