#
# $Id: Makefile.am,v 1.1 2004/07/31 00:59:11 rivetwa Exp $
#

MAINTAINERCLEANFILES = Makefile.in stamp-vti

EXTRA_DIST = TODO \
	test_ADC.py \
	test_ADD.py \
	test_ADIW.py \
	test_AND.py \
	test_ANDI.py \
	test_ASR.py \
	test_BCLR.py \
	test_BLD.py \
	test_BRBC.py \
	test_BRBS.py \
	test_BSET.py \
	test_BST.py \
	test_CALL.py \
	test_COM.py \
	test_CP.py \
	test_CPC.py \
	test_CPI.py \
	test_CPSE.py \
	test_DEC.py \
	test_EOR.py \
	test_ICALL.py \
	test_IJMP.py \
	test_INC.py \
	test_JMP.py \
	test_LDD_Y.py \
	test_LDD_Z.py \
	test_LDI.py \
	test_LDS.py \
	test_LD_X.py \
	test_LD_X_decr.py \
	test_LD_X_incr.py \
	test_LD_Y_decr.py \
	test_LD_Y_incr.py \
	test_LD_Z_decr.py \
	test_LD_Z_incr.py \
	test_LPM.py \
	test_LPM_Z.py \
	test_LPM_Z_incr.py \
	test_LSR.py \
	test_MOV.py \
	test_MOVW.py \
	test_MUL.py \
	test_MULS.py \
	test_MULSU.py \
	test_NEG.py \
	test_NOP.py \
	test_OR.py \
	test_ORI.py \
	test_POP.py \
	test_PUSH.py \
	test_RCALL.py \
	test_RET.py \
	test_RETI.py \
	test_RJMP.py \
	test_ROR.py \
	test_SBC.py \
	test_SBCI.py \
	test_SBIW.py \
	test_SBRC.py \
	test_SBRS.py \
	test_STD_Y.py \
	test_STD_Z.py \
	test_STS.py \
	test_ST_X.py \
	test_ST_X_decr.py \
	test_ST_X_incr.py \
	test_ST_Y_decr.py \
	test_ST_Y_incr.py \
	test_ST_Z_decr.py \
	test_ST_Z_incr.py \
	test_SUB.py \
	test_SUBI.py \
	test_SWAP.py
